turn english version to arabic

--- a/hotel-guest.html
+++ b/hotel-guest.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="hotel-guest-rtl.html">Arabic</a>
+                            <a class="lang-text" href="تقرير%20النزلاء.html">Arabic</a>
                         </div>
 
                     </div>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="hotel-guest-rtl.html">Arabic</a>
+                                <a class="lang-text" href="تقرير%20النزلاء.html">Arabic</a>
                             </div>
 
                         </div>
