--- a/my-hotel-info.html
+++ b/my-hotel-info.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="my-hotel-info-rtl-html.html">Arabic</a>
+                            <a class="lang-text" href="بيانات.html">Arabic</a>
                         </div>
 
                     </div>
@@ -110,7 +110,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="my-hotel-info-rtl-html.html">Arabic</a>
+                                <a class="lang-text" href="بيانات.html">Arabic</a>
                             </div>
 
                         </div>
