--- a/register-new-guest.html
+++ b/register-new-guest.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="register-new-guest-rtl.html">Arabic</a>
+                            <a class="lang-text" href="تسجيل%20نزيل%20جديد.html">Arabic</a>
                         </div>
 
                     </div>
@@ -107,7 +107,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="register-new-guest-rtl.html">Arabic</a>
+                                <a class="lang-text" href="تسجيل%20نزيل%20جديد.html">Arabic</a>
                             </div>
 
                         </div>
@@ -294,7 +294,7 @@
                 <input type="text" class="form-control" id="number" placeholder="Enter partner hotel number( who invite you ?) ">
             </div>
 
-            <a href="register-new-guest-2.html" class="submit" >Next Step</a>
+            <a href="فورم%20تسجيل%20نزيل%20الجديد.html" class="submit" >Next Step</a>
         </form>
     </div>
 </section>
