--- a/الأرباح.html
+++ b/الأرباح.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/register-new-guest.css">
+    <link rel="stylesheet" href="css/info/hotel-room.css">
+    <link rel="stylesheet" href="css/info/forget-pass.css">
+    <link rel="stylesheet" href="css/info/withdraw-profits.css">
     <link rel="stylesheet" href="css/style-rtl.css">
 </head>
 <body>
@@ -44,20 +46,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="register-new-guest.html">English</a>
+                        <a class="lang-text" href="withdraw-profits.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="register-new-guest-rtl.html">Arabic</a>
+                            <a class="lang-text" href="الأرباح.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                    <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index-rtl.html">
+                    <a  href="تسجيل%20الدخول.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -116,11 +118,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="register-new-guest.html">English</a>
+                            <a class="lang-text" href="withdraw-profits.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="register-new-guest-rtl.html">Arabic</a>
+                                <a class="lang-text" href="الأرباح.html">Arabic</a>
                             </div>
 
                         </div>
@@ -145,15 +147,14 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index-rtl.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
     </div>
-
 
     <nav class=" nav-bottom-mobile">
 
@@ -163,7 +164,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info-rtl-html.html">
+                <a href="بيانات.html">
 
 
                     بياناتى
@@ -173,7 +174,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest-rtl.html">
+                <a href="تقرير%20النزلاء.html">
 
 
                     تقرير بنزلاء فندقى
@@ -184,7 +185,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="تقرير%20المدن%20الفندقية.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -194,7 +195,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms-rtl.html">
+                <a href="تقرير%20الغرف.html">
 
 
                     تقرير الغرف الفندقيه
@@ -215,7 +216,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits-rtl.html">
+                <a href="الأرباح.html">
 
 
                     طلب الأرباح
@@ -227,7 +228,7 @@
 
 
             <li>
-                <a href="business-commitment-rtl.html">
+                <a href="التزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -254,7 +255,7 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html ">
+                <a href="تغيير%20الباسورد.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -292,29 +293,189 @@
 
 </section>
 <!-- end of nav-->
+<section id="sections-hotel">
+   <div id="withdraw-profit">
+       <div class="container">
+           <div class="section-back">
+               <a href="من%20نحن.html">الرجوع لأقسام الفندق </a>
+           </div>
+       </div>
+       <div class="container">
+           <div class="hotel-info">
+               <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                   <a href="#" id="withdraw-title">
+                       طلب الأرباح
+                   </a>
+               </h3>
 
+           </div>
+       </div>
+   </div>
+</section>
 <!-- start of form-->
 <section id="form">
-    <div class="form-title">
-        <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-        ><a href="#" >
-            تسجيل نزيل جديد
-        </a></h2>
-    </div>
+    <div class="container">
+        <div class="gold-bank">
+         <div id="cold-gold-info">
+             <div class="gold-info">
+                 <ul>
+                     <li>
+                         <a href="#">
+                             مجموع أرباحك :  <span> xxx</span>
+                         </a>
+                     </li>
+                     <li>
+                         <a href="#">
+                             الأرباح المدفوعه : <span> xxx</span>
+                         </a>
+                     </li>
+                     <li>
+                         <a href="#">
+                            الأرباح المتبقية :<span> xxx</span>
+                         </a>
+                     </li>
+                 </ul>
+             </div>
+         </div>
+            <div class="img-gold">
+                <img src="img/img-gold.png" alt="img-gold">
+            </div>
+        </div>
 
+    </div>
+    <div class="container">
+        <div class="mount-tip">
+            <h2> سيتم خصم 5% كرسوم تحويل لشركة باى بال</h2>
+        </div>
+    </div>
     <div class="container">
 
         <form action="#" class="form">
             <div class="form-group">
                 <label for="number"></label>
-                <input type="text" class="form-control" id="number" placeholder="أدخل رقم فندق الشريك الذى دعاك  ">
+                <input type="text" class="form-control" id="number" placeholder=" أدخل المبلغ المطلوب-أقل مبلغ $20">
+            </div>
+            <div class="form-group ">
+                <label for="password"></label>
+                <input type="text" class="form-control"  id="password" placeholder="أدخل حساب باى بال لأستلام المبلغ">
             </div>
 
-            <a href="register-new-guest-rtl-2.html" class="submit" >الخطوه التاليه</a>
+            <button class="change " >طلب الأرباح </button>
         </form>
     </div>
 </section>
 <!-- end of form -->
+<section class="hotel-guest">
+    <div class="container">
+        <div class="options">
+            <h3>
+                <a href="#">
+                تقرير الأرباح
+                </a>
+            </h3>
+        </div>
+        <table>
+            <tr>
+                <th>#</th>
+                <th>المبلغ</th>
+                <th>تاريخ الطلب</th>
+                <th>مرسل علي حساب باي بال </th>
+                <th>الاجراء</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+
+            </tr>
+            <tr>
+                <td>2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>3</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>4</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>5</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>6</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>7</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>8</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>9</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>10</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+        </table>
+    </div>
+</section>
 <footer>
     <div class="container">
         <div class="copyright">
