--- a/تسجيل الدخول.html
+++ b/تسجيل الدخول.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/hotel-room.css">
-    <link rel="stylesheet" href="css/info/hotel-guest.css">
     <link rel="stylesheet" href="css/style-rtl.css">
 
 </head>
 <body>
+
+
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -46,20 +46,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="hotel-guest.html">English</a>
+                        <a class="lang-text" href="index.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="hotel-guest-rtl.html">Arabic</a>
+                            <a class="lang-text" href="تسجيل الدخول.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                    <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index-rtl.html">
+                    <a  href="تسجيل الدخول.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -118,16 +118,15 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="hotel-guest.html">English</a>
+                            <a class="lang-text" href="index.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="hotel-guest-rtl.html">Arabic</a>
+                                <a class="lang-text" href="تسجيل الدخول.html">Arabic</a>
                             </div>
 
                         </div>
                     </div>
-
                 </div>
 
                 <!--          text-second-logo  -->
@@ -148,10 +147,10 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index-rtl.html">دخول حساب فندقى</a>
+                <a  href="تسجيل الدخول.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -165,7 +164,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info-rtl-html.html">
+                <a href="بيانات.html">
 
 
                     بياناتى
@@ -175,7 +174,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest-rtl.html">
+                <a href="تقرير%20النزلاء.html">
 
 
                     تقرير بنزلاء فندقى
@@ -186,7 +185,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="تقرير%20المدن%20الفندقية.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -196,7 +195,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms-rtl.html">
+                <a href="تقرير%20الغرف.html">
 
 
                     تقرير الغرف الفندقيه
@@ -217,7 +216,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits-rtl.html">
+                <a href="الأرباح.html">
 
 
                     طلب الأرباح
@@ -229,7 +228,7 @@
 
 
             <li>
-                <a href="business-commitment-rtl.html">
+                <a href="التزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -256,7 +255,7 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html ">
+                <a href="تغيير%20الباسورد.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -295,119 +294,40 @@
 </section>
 <!-- end of nav-->
 <!-- start of form-->
-<section id="sections-hotel">
-   <div id="guest">
-       <div class="container">
-           <div class="section-back">
-               <a href="about-us-rtl.html">الرجوع لأقسام الفندق </a>
-           </div>
-       </div>
-       <div class="container">
-           <div class="hotel-info">
-               <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                   <a href="#">
-                       تقرير بنزلاء فندقى
-                   </a>
-               </h3>
+<section id="form">
+    <div class="form-title">
+        <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+            <a href="تسجيل الدخول.html">     تسجيل دخول على حساب فندقك
+            </a></h2>
+    </div>
 
-           </div>
-       </div>
-   </div>
-
-</section>
-<!-- end of form -->
-<!-- end of nav-->
-<!-- Table -->
-<section class="hotel-guest">
     <div class="container">
 
-        <table>
-            <tr>
-                <th>#</th>
-                <th>أسم النزيل</th>
-                <th>رقم الغرفة </th>
-                <th>تاريخ فتح الغرفة </th>
-                <th>بلد النزيل </th>
-                <th>هاتف النزيل </th>
-                <th>البريد الألكتروني</th>
+        <form action="#" class="form">
+            <div class="form-group " >
+                <label for="number"></label>
+                <input type="text" class="form-control" id="number" placeholder="  أدخل رقم فندقك " required>
+            </div>
+            <div class="form-group ">
+                <label for="password"></label>
+                <input type="password" class="form-control"  id="password" placeholder=" أدخل كلمة السر لفندقك ">
+            </div>
+            <a href="من%20نحن.html">
+           <div class="button">
+               <a class="submit " href="من%20نحن.html">دخول حساب فندقى
 
-            </tr>
-            <tr>
-                <td>1</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                   <i class="fas fa-chevron-right"></i>
+               </a>
+           </div>
+            </a>
+            <a class="forget-pass" href="https://ar.pyramid-challenge.com/contact-us">
+                إذا لم تتذكر كلمة السر أو رقم فندقك , أضغط هنا
+            </a>
+        </form>
 
-
-            </tr>
-            <tr>
-                <td>2</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>3</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>4</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>5</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>6</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>7</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-            </tr>
-
-        </table>
     </div>
 </section>
-<!--end of table -->
+<!-- end of form -->
 <footer>
     <div class="container">
         <div class="copyright">
@@ -427,5 +347,10 @@
 <script src="js/jquery.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/app.js"></script>
+<script>
+
+
+
+</script>
 </body>
 </html>
