--- a/تقرير الغرف.html
+++ b/تقرير الغرف.html
@@ -49,16 +49,16 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="hotel-rooms-rtl.html">Arabic</a>
+                            <a class="lang-text" href="تقرير الغرف.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                    <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index-rtl.html">
+                    <a  href="تسجيل%20الدخول.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -120,7 +120,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="hotel-rooms-rtl.html">Arabic</a>
+                                <a class="lang-text" href="تقرير الغرف.html">Arabic</a>
                             </div>
 
                         </div>
@@ -145,10 +145,10 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index-rtl.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -162,7 +162,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info-rtl-html.html">
+                <a href="بيانات.html">
 
 
                     بياناتى
@@ -172,7 +172,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest-rtl.html">
+                <a href="تقرير%20النزلاء.html">
 
 
                     تقرير بنزلاء فندقى
@@ -183,7 +183,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="تقرير%20المدن%20الفندقية.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -193,7 +193,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms-rtl.html">
+                <a href="تقرير الغرف.html">
 
 
                     تقرير الغرف الفندقيه
@@ -214,7 +214,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits-rtl.html">
+                <a href="الأرباح.html">
 
 
                     طلب الأرباح
@@ -226,7 +226,7 @@
 
 
             <li>
-                <a href="business-commitment-rtl.html">
+                <a href="التزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -253,7 +253,7 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html ">
+                <a href="تغيير%20الباسورد.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -296,7 +296,7 @@
    <div id="rooms">
        <div class="container">
            <div class="section-back">
-               <a href="about-us-rtl.html">
+               <a href="من%20نحن.html">
                    الرجوع لأقسام الفندق
                </a>
            </div>
