--- a/تقرير المدن الفندقية.html
+++ b/تقرير المدن الفندقية.html
@@ -9,18 +9,12 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/business-commitment.css">
+    <link rel="stylesheet" href="css/info/cities.css">
     <link rel="stylesheet" href="css/style-rtl.css">
-    <style>
-        #sections{
-            padding-top: 40px !important;
-            text-align: left;
-        }
-    </style>
+
 
 </head>
 <body>
-
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -52,20 +46,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="business-commitment.html">English</a>
+                        <a class="lang-text" href="cities.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="business-commitment-rtl.html">Arabic</a>
+                            <a class="lang-text" href="تقرير المدن الفندقية.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                    <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index-rtl.html">
+                    <a  href="تسجيل%20الدخول.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -76,7 +70,7 @@
     </div>
 
     <nav class="nav-bottom">
-        <ul>
+        <ul  >
             <li><a href="https://ar.pyramid-challenge.com/">
                 الرئيسيه
             </a></li>
@@ -91,6 +85,7 @@
             </a></li>
             <li><a href=" https://ar.pyramid-challenge.com/contact-us">
                 أتصل بنا
+
             </a></li>
         </ul>
     </nav>
@@ -123,11 +118,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="business-commitment.html">English</a>
+                            <a class="lang-text" href="cities.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="business-commitment-rtl.html">Arabic</a>
+                                <a class="lang-text" href="تقرير المدن الفندقية.html">Arabic</a>
                             </div>
 
                         </div>
@@ -152,10 +147,10 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index-rtl.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -169,7 +164,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info-rtl-html.html">
+                <a href="بيانات.html">
 
 
                     بياناتى
@@ -179,7 +174,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest-rtl.html">
+                <a href="تقرير%20النزلاء.html">
 
 
                     تقرير بنزلاء فندقى
@@ -190,7 +185,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="تقرير المدن الفندقية.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -200,7 +195,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms-rtl.html">
+                <a href="تقرير%20الغرف.html">
 
 
                     تقرير الغرف الفندقيه
@@ -221,7 +216,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits-rtl.html">
+                <a href="الأرباح.html">
 
 
                     طلب الأرباح
@@ -233,7 +228,7 @@
 
 
             <li>
-                <a href="business-commitment-rtl.html">
+                <a href="التزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -260,7 +255,7 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html ">
+                <a href="تغيير%20الباسورد.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -299,51 +294,26 @@
 </section>
 <!-- end of nav-->
 
+
 <!-- start of form-->
 <section id="sections-hotel">
-  <div id="business-rtl">
-      <div class="container-rtl">
-          <div class="section-back">
-              <a href="about-us-rtl.html">
-                  الرجوع لأقسام الفندق
-              </a>
-          </div>
-          <div class="section-title">
-              <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-              ><a href="#">
-                  ألتزام العمل
+<div id="cities">
+    <div class="container">
+        <div class="section-back">
+            <a href="من%20نحن.html">الرجوع أقسام الفندق </a>
+        </div>
+    </div>
+    <div class="container">
+        <div class="hotel-info">
+            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                <a href="#">
+                    تقرير المدن الفندقية
+                </a>
+            </h3>
 
-              </a></h2>
-          </div>
-      </div>
-      <div class="container-rtl">
-          <div class="hotel-info">
-              <h3>
-                  لقد قمت بنفسك بتحديد ألتزام عملك
-
-              </h3>
-              <h3>
-                  هدفك هو :
-                  <span>xxxxxx</span>
-              </h3>
-              <h3>
-                  طموحك المالى هو :
-                  <span>xxxxxx</span>
-              </h3>
-              <h3 >
-                  عدد النزلاء المسجلين من خلال رقم فندقك :
-                  <span>xxxxxx</span>
-              </h3>
-              <p>
-                  يمكنك زيادة أرباحك فى أى وقت , من خلال تسجيل المزيد من النزلاء من خلال رقم فندقك
-
-<br>
-                  الجدول التالى يبين ما هو سقف أرباحك , أعتماداً على عدد النزلاء المسجلين من خلال رقم فندقك
-
-              </p>
-          </div>
-      </div>
-  </div>
+        </div>
+    </div>
+</div>
 </section>
 <!--
 
@@ -421,64 +391,71 @@
 <!-- Table -->
 <section class="hotel-guest">
     <div class="container">
-        <div id="rtl-direction">
-            <table>
-                <tr>
 
-                    <th>عدد نزلاء فندقك</th>
-                    <th>سقف ارباح فندقك</th>
+        <table>
+            <tr>
 
-                </tr>
-                <tr>
-                    <td>1 نزيل </td>
-                    <td>$100</td>
+                <th>المدن الفندقية</th>
+                <th>عدد نزلاء المدينة</th>
 
-
-                </tr>
-                <tr>
-                    <td>2 نزلاء</td>
-                    <td>$1000</td>
+            </tr>
+            <tr>
+                <td>المدينة1</td>
+                <td></td>
 
 
-                </tr>
-                <tr>
-                    <td>3 نزلاء</td>
-                    <td>$30,000</td>
+            </tr>
+            <tr>
+                <td>المدينة 2</td>
+                <td></td>
 
 
-                </tr>
-                <tr>
-                    <td> 4 نزلاء</td>
-                    <td>$40,000</td>
+            </tr>
+            <tr>
+                <td>المدينة 3</td>
+                <td></td>
 
 
-                </tr>
-                <tr>
-                    <td>5 نزلاء</td>
-                    <td>$50,000</td>
+            </tr>
+            <tr>
+                <td>المدينة 4</td>
+                <td></td>
 
 
-                </tr>
-                <tr>
-                    <td>6 نزلاء</td>
-                    <td>$300,000</td>
+            </tr>
+            <tr>
+                <td>المدينة 5</td>
+                <td></td>
 
 
-                </tr>
-                <tr>
-                    <td> 7 نزلاء</td>
-                    <td>$1,000,000</td>
+            </tr>
+            <tr>
+                <td>المدينة 6</td>
+                <td></td>
 
-                </tr>
-                <tr>
-                    <td>أكثر من 7 نزلاء</td>
-                    <td>$ سقف مفتوح </td>
 
-                </tr>
+            </tr>
+            <tr>
+                <td>المدينة 7</td>
+                <td></td>
 
-            </table>
-        </div>
+            </tr>
+            <tr>
+                <td>المدينة8 </td>
+                <td></td>
 
+            </tr>
+            <tr>
+                <td>المدينة 9</td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>المدينة10 </td>
+                <td></td>
+
+            </tr>
+        </table>
     </div>
 </section>
 <!--end of table -->
