--- a/تقرير النزلاء.html
+++ b/تقرير النزلاء.html
@@ -7,14 +7,14 @@
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
     <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href='css/animate.css'>
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/custom-style.css">
+    <link rel="stylesheet" href="css/info/hotel-room.css">
+    <link rel="stylesheet" href="css/info/hotel-guest.css">
     <link rel="stylesheet" href="css/style-rtl.css">
 
 </head>
 <body>
-
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -46,20 +46,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="my-hotel-info.html">English</a>
+                        <a class="lang-text" href="hotel-guest.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="my-hotel-info-rtl-html.html">Arabic</a>
+                            <a class="lang-text" href="تقرير النزلاء.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                    <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index-rtl.html">
+                    <a  href="تسجيل%20الدخول.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -118,11 +118,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="my-hotel-info.html">English</a>
+                            <a class="lang-text" href="hotel-guest.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="my-hotel-info-rtl-html.html">Arabic</a>
+                                <a class="lang-text" href="تقرير النزلاء.html">Arabic</a>
                             </div>
 
                         </div>
@@ -148,10 +148,10 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index-rtl.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -165,7 +165,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info-rtl-html.html">
+                <a href="بيانات.html">
 
 
                     بياناتى
@@ -175,7 +175,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest-rtl.html">
+                <a href="تقرير النزلاء.html">
 
 
                     تقرير بنزلاء فندقى
@@ -186,7 +186,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="تقرير%20المدن%20الفندقية.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -196,7 +196,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms-rtl.html">
+                <a href="تقرير%20الغرف.html">
 
 
                     تقرير الغرف الفندقيه
@@ -217,7 +217,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits-rtl.html">
+                <a href="الأرباح.html">
 
 
                     طلب الأرباح
@@ -229,7 +229,7 @@
 
 
             <li>
-                <a href="business-commitment-rtl.html">
+                <a href="التزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -256,7 +256,7 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html ">
+                <a href="تغيير%20الباسورد.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -295,62 +295,119 @@
 </section>
 <!-- end of nav-->
 <!-- start of form-->
-<section id="sections">
-    <!--
-    -->
-    <div class="container-rtl" id="container-rtl">
-        <div class="section-back wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-            <a href="about-us-rtl.html">
-                الرجوع لأقسام الفندق
-            </a>
-        </div>
-        <div class="section-title">
-            <h2  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"><a href="#">
-                بيانات الفندق :
-            </a></h2>
-        </div>
-        <div class="hotel-info">
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                أسم صاحب الفندق :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                البريد الألكترونى :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                رقم الهاتف :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                تاريخ الميلاد
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                البلد :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" >
-                النوع :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                تاريخ فتح الفندق :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                رقم فندقك :
-                <span>
-                    xxxxxx
-                </span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                لقد تم تسجيلك فى الفندق رقم :
-                <span>xxxxxx</span>
-            </h3>
-        </div>
+<section id="sections-hotel">
+   <div id="guest">
+       <div class="container">
+           <div class="section-back">
+               <a href="من%20نحن.html">الرجوع لأقسام الفندق </a>
+           </div>
+       </div>
+       <div class="container">
+           <div class="hotel-info">
+               <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                   <a href="#">
+                       تقرير بنزلاء فندقى
+                   </a>
+               </h3>
+
+           </div>
+       </div>
+   </div>
+
+</section>
+<!-- end of form -->
+<!-- end of nav-->
+<!-- Table -->
+<section class="hotel-guest">
+    <div class="container">
+
+        <table>
+            <tr>
+                <th>#</th>
+                <th>أسم النزيل</th>
+                <th>رقم الغرفة </th>
+                <th>تاريخ فتح الغرفة </th>
+                <th>بلد النزيل </th>
+                <th>هاتف النزيل </th>
+                <th>البريد الألكتروني</th>
+
+            </tr>
+            <tr>
+                <td>1</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>3</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>4</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>5</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>6</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>7</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+
+        </table>
     </div>
 </section>
+<!--end of table -->
 <footer>
     <div class="container">
         <div class="copyright">
