--- a/رسالة تسجيل النجاح للدخول.html
+++ b/رسالة تسجيل النجاح للدخول.html
@@ -64,7 +64,7 @@
         </div>
 
 
-        <a  href="about-us-rtl.html" class="submit " >
+        <a href="من%20نحن.html" class="submit " >
             الذهاب لأقسام الفندق
             <i class="fas fa-chevron-right"></i>
         </a>
