--- a/about-us.html
+++ b/about-us.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="about-us-rtl.html">Arabic</a>
+                            <a class="lang-text" href="من%20نحن.html">Arabic</a>
                         </div>
 
                     </div>
@@ -110,7 +110,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="about-us-rtl.html">Arabic</a>
+                                <a class="lang-text" href="من%20نحن.html">Arabic</a>
                             </div>
 
                         </div>
