--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="hotel-rooms-rtl.html">Arabic</a>
+                            <a class="lang-text" href="تقرير%20الغرف.html">Arabic</a>
                         </div>
 
                     </div>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="hotel-rooms-rtl.html">Arabic</a>
+                                <a class="lang-text" href="تقرير%20الغرف.html">Arabic</a>
                             </div>
 
                         </div>
