--- a/التزام العمل.html
+++ b/التزام العمل.html
@@ -9,12 +9,18 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/cities.css">
+    <link rel="stylesheet" href="css/info/business-commitment.css">
     <link rel="stylesheet" href="css/style-rtl.css">
-
+    <style>
+        #sections{
+            padding-top: 40px !important;
+            text-align: left;
+        }
+    </style>
 
 </head>
 <body>
+
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -46,20 +52,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="cities.html">English</a>
+                        <a class="lang-text" href="business-commitment.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="cities-rtl.html">Arabic</a>
+                            <a class="lang-text" href="التزام العمل.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                    <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index-rtl.html">
+                    <a  href="تسجيل%20الدخول.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -70,7 +76,7 @@
     </div>
 
     <nav class="nav-bottom">
-        <ul  >
+        <ul>
             <li><a href="https://ar.pyramid-challenge.com/">
                 الرئيسيه
             </a></li>
@@ -85,7 +91,6 @@
             </a></li>
             <li><a href=" https://ar.pyramid-challenge.com/contact-us">
                 أتصل بنا
-
             </a></li>
         </ul>
     </nav>
@@ -118,11 +123,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="cities.html">English</a>
+                            <a class="lang-text" href="business-commitment.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="cities-rtl.html">Arabic</a>
+                                <a class="lang-text" href="التزام العمل.html">Arabic</a>
                             </div>
 
                         </div>
@@ -147,10 +152,10 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index-rtl.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -164,7 +169,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info-rtl-html.html">
+                <a href="بيانات.html">
 
 
                     بياناتى
@@ -174,7 +179,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest-rtl.html">
+                <a href="تقرير%20النزلاء.html">
 
 
                     تقرير بنزلاء فندقى
@@ -185,7 +190,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="تقرير%20المدن%20الفندقية.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -195,7 +200,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms-rtl.html">
+                <a href="تقرير%20الغرف.html">
 
 
                     تقرير الغرف الفندقيه
@@ -216,7 +221,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits-rtl.html">
+                <a href="الأرباح.html">
 
 
                     طلب الأرباح
@@ -228,7 +233,7 @@
 
 
             <li>
-                <a href="business-commitment-rtl.html">
+                <a href="التزام العمل.html">
 
 
                     ألتزام العمل
@@ -255,7 +260,7 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html ">
+                <a href="تغيير%20الباسورد.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -294,26 +299,51 @@
 </section>
 <!-- end of nav-->
 
-
 <!-- start of form-->
 <section id="sections-hotel">
-<div id="cities">
-    <div class="container">
-        <div class="section-back">
-            <a href="about-us-rtl.html">الرجوع أقسام الفندق </a>
-        </div>
-    </div>
-    <div class="container">
-        <div class="hotel-info">
-            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <a href="#">
-                    تقرير المدن الفندقية
-                </a>
-            </h3>
+  <div id="business-rtl">
+      <div class="container-rtl">
+          <div class="section-back">
+              <a href="من%20نحن.html">
+                  الرجوع لأقسام الفندق
+              </a>
+          </div>
+          <div class="section-title">
+              <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+              ><a href="#">
+                  ألتزام العمل
 
-        </div>
-    </div>
-</div>
+              </a></h2>
+          </div>
+      </div>
+      <div class="container-rtl">
+          <div class="hotel-info">
+              <h3>
+                  لقد قمت بنفسك بتحديد ألتزام عملك
+
+              </h3>
+              <h3>
+                  هدفك هو :
+                  <span>xxxxxx</span>
+              </h3>
+              <h3>
+                  طموحك المالى هو :
+                  <span>xxxxxx</span>
+              </h3>
+              <h3 >
+                  عدد النزلاء المسجلين من خلال رقم فندقك :
+                  <span>xxxxxx</span>
+              </h3>
+              <p>
+                  يمكنك زيادة أرباحك فى أى وقت , من خلال تسجيل المزيد من النزلاء من خلال رقم فندقك
+
+<br>
+                  الجدول التالى يبين ما هو سقف أرباحك , أعتماداً على عدد النزلاء المسجلين من خلال رقم فندقك
+
+              </p>
+          </div>
+      </div>
+  </div>
 </section>
 <!--
 
@@ -391,71 +421,64 @@
 <!-- Table -->
 <section class="hotel-guest">
     <div class="container">
+        <div id="rtl-direction">
+            <table>
+                <tr>
 
-        <table>
-            <tr>
+                    <th>عدد نزلاء فندقك</th>
+                    <th>سقف ارباح فندقك</th>
 
-                <th>المدن الفندقية</th>
-                <th>عدد نزلاء المدينة</th>
-
-            </tr>
-            <tr>
-                <td>المدينة1</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>المدينة 2</td>
-                <td></td>
+                </tr>
+                <tr>
+                    <td>1 نزيل </td>
+                    <td>$100</td>
 
 
-            </tr>
-            <tr>
-                <td>المدينة 3</td>
-                <td></td>
+                </tr>
+                <tr>
+                    <td>2 نزلاء</td>
+                    <td>$1000</td>
 
 
-            </tr>
-            <tr>
-                <td>المدينة 4</td>
-                <td></td>
+                </tr>
+                <tr>
+                    <td>3 نزلاء</td>
+                    <td>$30,000</td>
 
 
-            </tr>
-            <tr>
-                <td>المدينة 5</td>
-                <td></td>
+                </tr>
+                <tr>
+                    <td> 4 نزلاء</td>
+                    <td>$40,000</td>
 
 
-            </tr>
-            <tr>
-                <td>المدينة 6</td>
-                <td></td>
+                </tr>
+                <tr>
+                    <td>5 نزلاء</td>
+                    <td>$50,000</td>
 
 
-            </tr>
-            <tr>
-                <td>المدينة 7</td>
-                <td></td>
+                </tr>
+                <tr>
+                    <td>6 نزلاء</td>
+                    <td>$300,000</td>
 
-            </tr>
-            <tr>
-                <td>المدينة8 </td>
-                <td></td>
 
-            </tr>
-            <tr>
-                <td>المدينة 9</td>
-                <td></td>
+                </tr>
+                <tr>
+                    <td> 7 نزلاء</td>
+                    <td>$1,000,000</td>
 
-            </tr>
-            <tr>
-                <td>المدينة10 </td>
-                <td></td>
+                </tr>
+                <tr>
+                    <td>أكثر من 7 نزلاء</td>
+                    <td>$ سقف مفتوح </td>
 
-            </tr>
-        </table>
+                </tr>
+
+            </table>
+        </div>
+
     </div>
 </section>
 <!--end of table -->
