--- a/بيانات.html
+++ b/بيانات.html
@@ -7,11 +7,9 @@
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
     <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/datepicker.min.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href='css/animate.css'>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/hotel-room.css">
-    <link rel="stylesheet" href="css/info/register-new-guest2.css">
+    <link rel="stylesheet" href="css/info/custom-style.css">
     <link rel="stylesheet" href="css/style-rtl.css">
 
 </head>
@@ -48,20 +46,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="register-new-guest-2.html">English</a>
+                        <a class="lang-text" href="my-hotel-info.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="register-new-guest-rtl-2.html">Arabic</a>
+                            <a class="lang-text" href="بيانات.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                    <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index-rtl.html">
+                    <a  href="تسجيل%20الدخول.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -120,15 +118,16 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="register-new-guest-2.html">English</a>
+                            <a class="lang-text" href="my-hotel-info.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="register-new-guest-rtl-2.html">Arabic</a>
+                                <a class="lang-text" href="بيانات.html">Arabic</a>
                             </div>
 
                         </div>
                     </div>
+
                 </div>
 
                 <!--          text-second-logo  -->
@@ -149,10 +148,10 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index-rtl.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -166,7 +165,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info-rtl-html.html">
+                <a href="بيانات.html">
 
 
                     بياناتى
@@ -176,7 +175,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest-rtl.html">
+                <a href="تقرير%20النزلاء.html">
 
 
                     تقرير بنزلاء فندقى
@@ -187,7 +186,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="تقرير%20المدن%20الفندقية.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -197,7 +196,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms-rtl.html">
+                <a href="تقرير%20الغرف.html">
 
 
                     تقرير الغرف الفندقيه
@@ -218,7 +217,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits-rtl.html">
+                <a href="الأرباح.html">
 
 
                     طلب الأرباح
@@ -230,7 +229,7 @@
 
 
             <li>
-                <a href="business-commitment-rtl.html">
+                <a href="التزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -257,7 +256,7 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html ">
+                <a href="تغيير%20الباسورد.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -292,143 +291,66 @@
 
 
 
+
 </section>
 <!-- end of nav-->
 <!-- start of form-->
-<section id="form">
-    <div class="form-title">
-        <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-        ><a href="#" >
-            تسجيل نزيل جديد
-
-        </a></h2>
-
-    </div>
-    <div class="form-title">
-
-        <p>
-لقد تم دعوتك من خلال رقم الفندق :                       <span>
-            1234567890
-        </span>
-        </p>
-    </div>
-    <div class="container-rtl">
-
-        <form action="#" class="form">
-            <div class="form-group" >
-                <label for="number"></label>
-                <input type="text" class="form-control" id="number" placeholder=" أدخل مفتاحك الرقمى " required>
-            </div>
-            <div class="form-group ">
-                <label for="password"></label>
-                <input type="password" class="form-control"  id="password" placeholder="ضع كلمة السر لفندقك " required>
-            </div>
-            <div class="form-group">
-                <label for="passwords"></label>
-                <input type="password" class="form-control"  id="passwords" placeholder="أعد كلمة السر لفندقك" required>
-            </div>
-            <div class="form-group">
-                <label for="frist-name"></label>
-                <input type="text" class="form-control"  id="frist-name" placeholder="أكتب أسمك الأول" required>
-            </div>
-            <div class="form-group">
-                <label for="middle"></label>
-                <input type="text" class="form-control"  id="middle" placeholder="أكتب أسم الأب" required>
-            </div>
-            <div class="form-group">
-                <label for="last-name"></label>
-                <input type="text" class="form-control"  id="last-name" placeholder="أكتب لقب العائله" required>
-            </div>
-            <div class="form-group">
-                <label for="email"></label>
-                <input type="email" class="form-control"  id="email" placeholder="أدخل بريدك الألكترونى" required>
-            </div>
-            <div class="form-group">
-                <label for="phone"></label>
-                <input type="text" class="form-control"  id="phone" placeholder="أدخل رقم هاتفك" required>
-            </div>
-
-            <div class="form-group">
-                <label for="country"></label>
-                <input type="text" class="form-control"  id="country" placeholder="حدد بلدك أو منطقة بلدك" required>
-            </div>
-            <div class="form-group" >
-                <div id="inline" data-date="01/05/2020" >
-                    <label for="datepicker"></label>
-                    <input type="text" id="datepicker" name="datepicker"  placeholder="تاريخ ميلادك">
-                </div>
-
-            </div>
-            <div class="form-group checkbox-group">
-                <div class="checkbox">
-                    <input type="checkbox" name="female" required>
-                    <span>نوع/أنثي </span>
-
-                </div>
-                <div class="checkbox">
-                    <input type="checkbox" name="male" required>
-                    <span> نوع/ذكر</span>
-
-                </div>
-
-            </div>
-
-            <div class="form-group">
-                <div class="options">
-                    <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required>
-                        <option>حدد هدفك (اختار حلمك)</option>
-                        <option > شراء سياره</option>
-                        <option > شراء منزل</option>
-                        <option > سداد ديون</option>
-                        <option >السفر حول العالم</option>
-                        <option >دفع تكاليف تعليم</option>
-                        <option >توفير مصاريف للزواج</option>
-                        <option >أعمال خيريه</option>
-                        <option >فقط لأدخار المال</option>
-
-                    </select>
-                </div>
-
-            </div>
-            <div class="form-group">
-                <div class="options">
-                    <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collectio" required>
-                        <option >حدد طموحك المالي</option>
-                        <option >$ 100</option>
-                        <option >$  1000</option>
-                        <option >$  30,000</option>
-                        <option >$ 40,000</option>
-                        <option >$ 50,000</option>
-                        <option >$ 300,000</option>
-                        <option >$ 1,000,000</option>
-                        <option >$ سقف مفتوح </option>
-
-                    </select>
-                </div>
-
-            </div>
-            <div class="form-group checkbox-confirm">
-                <div class="checkbox">
-                    <input type="checkbox" name="video-confirm" required>
-                    <span> شاهدت فيديو شرح المشروع الفندقى </span>
-
-                </div>
-                <div class="checkbox">
-                    <input type="checkbox" name="faq" required>
-                    <span>قرأت صفحة أسئله و إجابه </span>
-                </div>
-                <div class="checkbox">
-                    <input type="checkbox" name="terms" required>
-                    <span>أوافق على شروط و بنود التعاقد الألكترونى
-                        <a href="https://ar.pyramid-challenge.com/terms-conditions"> الأطلاع على شروط و بنود التعاقد</a></span>
-                </div>
-            </div>
-
-            <a href="registration-success-message-rtl.html" class="submit"  >أفتح غرفتك الأفتراضيه </a>
-        </form>
+<section id="sections">
+    <!--
+    -->
+    <div class="container-rtl" id="container-rtl">
+        <div class="section-back wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+            <a href="من%20نحن.html">
+                الرجوع لأقسام الفندق
+            </a>
+        </div>
+        <div class="section-title">
+            <h2  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"><a href="#">
+                بيانات الفندق :
+            </a></h2>
+        </div>
+        <div class="hotel-info">
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                أسم صاحب الفندق :
+                <span>xxxxxx</span>
+            </h3>
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                البريد الألكترونى :
+                <span>xxxxxx</span>
+            </h3>
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                رقم الهاتف :
+                <span>xxxxxx</span>
+            </h3>
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                تاريخ الميلاد
+                <span>xxxxxx</span>
+            </h3>
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                البلد :
+                <span>xxxxxx</span>
+            </h3>
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" >
+                النوع :
+                <span>xxxxxx</span>
+            </h3>
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                تاريخ فتح الفندق :
+                <span>xxxxxx</span>
+            </h3>
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                رقم فندقك :
+                <span>
+                    xxxxxx
+                </span>
+            </h3>
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                لقد تم تسجيلك فى الفندق رقم :
+                <span>xxxxxx</span>
+            </h3>
+        </div>
     </div>
 </section>
-<!-- end of form -->
 <footer>
     <div class="container">
         <div class="copyright">
@@ -446,15 +368,7 @@
     </div>
 </footer>
 <script src="js/jquery.js"></script>
-<script src="js/datepicker-full.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/app.js"></script>
-<script>
-    const elem = document.querySelector('input[name="datepicker"]');
-    const datepicker = new Datepicker(elem, {
-        // options here
-        calendarWeeks: false,
-    });
-</script>
 </body>
 </html>
