--- a/تغيير الباسورد.html
+++ b/تغيير الباسورد.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/info/forget-pass.css">
     <link rel="stylesheet" href="css/style-rtl.css">
-
 </head>
 <body>
 
@@ -46,20 +46,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="index.html">English</a>
+                        <a class="lang-text" href="chnage-pass.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="index-rtl.html">Arabic</a>
+                            <a class="lang-text" href="تغيير الباسورد.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                    <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index-rtl.html">
+                    <a  href="تسجيل%20الدخول.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -118,11 +118,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="index.html">English</a>
+                            <a class="lang-text" href="chnage-pass.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="index-rtl.html">Arabic</a>
+                                <a class="lang-text" href="تغيير الباسورد.html">Arabic</a>
                             </div>
 
                         </div>
@@ -147,10 +147,10 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index-rtl.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -164,7 +164,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info-rtl-html.html">
+                <a href="بيانات.html">
 
 
                     بياناتى
@@ -174,7 +174,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest-rtl.html">
+                <a href="تقرير%20النزلاء.html">
 
 
                     تقرير بنزلاء فندقى
@@ -185,7 +185,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="تقرير%20المدن%20الفندقية.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -195,7 +195,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms-rtl.html">
+                <a href="تقرير%20الغرف.html">
 
 
                     تقرير الغرف الفندقيه
@@ -216,7 +216,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits-rtl.html">
+                <a href="الأرباح.html">
 
 
                     طلب الأرباح
@@ -228,7 +228,7 @@
 
 
             <li>
-                <a href="business-commitment-rtl.html">
+                <a href="التزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -255,7 +255,7 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html ">
+                <a href="تغيير الباسورد.html">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -293,38 +293,47 @@
 
 </section>
 <!-- end of nav-->
+<section id="sections-hotel" >
+ <div id="change-pass">
+     <div class="container">
+         <div class="section-back">
+             <a href="من%20نحن.html">الرجوع لأقسام الفندق</a>
+         </div>
+     </div>
+     <div class="container">
+         <div class="hotel-info">
+             <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+             >
+                 <a href="#">
+                     تغيير كلمة السر للفندق
+                 </a>
+             </h3>
+
+         </div>
+     </div>
+ </div>
+</section>
 <!-- start of form-->
 <section id="form">
-    <div class="form-title">
-        <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-            <a href="index-rtl.html">     تسجيل دخول على حساب فندقك
-            </a></h2>
-    </div>
+
 
     <div class="container">
 
         <form action="#" class="form">
-            <div class="form-group " >
+            <div class="form-group wow fadeInRight"  data-wow-duration="1s" >
                 <label for="number"></label>
-                <input type="text" class="form-control" id="number" placeholder="  أدخل رقم فندقك " required>
+                <input type="password" class="form-control" id="number" placeholder="أدخل كلمة السر الحاليه للفندق">
             </div>
-            <div class="form-group ">
+            <div class="form-group wow fadeInRight"  data-wow-duration="3s">
                 <label for="password"></label>
-                <input type="password" class="form-control"  id="password" placeholder=" أدخل كلمة السر لفندقك ">
+                <input type="password" class="form-control"  id="password" placeholder="أدخل كلمة السر الجديده">
             </div>
-            <a href="about-us-rtl.html">
-           <div class="button">
-               <a class="submit " href="about-us-rtl.html">دخول حساب فندقى
-
-                   <i class="fas fa-chevron-right"></i>
-               </a>
-           </div>
-            </a>
-            <a class="forget-pass" href="https://ar.pyramid-challenge.com/contact-us">
-                إذا لم تتذكر كلمة السر أو رقم فندقك , أضغط هنا
-            </a>
+            <div class="form-group wow fadeInRight"  data-wow-duration="4s">
+                <label for="passwordd"></label>
+                <input type="password" class="form-control"  id="passwordd" placeholder="أدخل كلمة السر الجديده مره أخرى">
+            </div>
+            <button class="change wow fadeInRight"  data-wow-duration="6s"  >تغيير كلمة السر للفندق</button>
         </form>
-
     </div>
 </section>
 <!-- end of form -->
@@ -347,10 +356,5 @@
 <script src="js/jquery.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/app.js"></script>
-<script>
-
-
-
-</script>
 </body>
 </html>
