--- a/فورم تسجيل النزيل الجديد.html
+++ b/فورم تسجيل النزيل الجديد.html
@@ -7,13 +7,15 @@
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/datepicker.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/about/custom-style.css">
+    <link rel="stylesheet" href="css/info/hotel-room.css">
+    <link rel="stylesheet" href="css/info/register-new-guest2.css">
     <link rel="stylesheet" href="css/style-rtl.css">
+
 </head>
 <body>
-
 
 <!-- start of  nav for desktop-->
 <section id="nav">
@@ -46,20 +48,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="about-us.html" >English</a>
+                        <a class="lang-text" href="فورم%20تسجيل%20نزيل%20الجديد.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="about-us-rtl.html">Arabic</a>
+                            <a class="lang-text" href="فورم تسجيل النزيل الجديد.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                    <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index-rtl.html">
+                    <a  href="تسجيل%20الدخول.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -70,7 +72,7 @@
     </div>
 
     <nav class="nav-bottom">
-        <ul>
+        <ul  >
             <li><a href="https://ar.pyramid-challenge.com/">
                 الرئيسيه
             </a></li>
@@ -85,6 +87,7 @@
             </a></li>
             <li><a href=" https://ar.pyramid-challenge.com/contact-us">
                 أتصل بنا
+
             </a></li>
         </ul>
     </nav>
@@ -117,11 +120,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="about-us.html">English</a>
+                            <a class="lang-text" href="فورم%20تسجيل%20نزيل%20الجديد.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="about-us-rtl.html">Arabic</a>
+                                <a class="lang-text" href="فورم تسجيل النزيل الجديد.html">Arabic</a>
                             </div>
 
                         </div>
@@ -146,10 +149,10 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index-rtl.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -163,7 +166,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info-rtl-html.html">
+                <a href="بيانات.html">
 
 
                     بياناتى
@@ -173,7 +176,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest-rtl.html">
+                <a href="تقرير%20النزلاء.html">
 
 
                     تقرير بنزلاء فندقى
@@ -184,7 +187,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="تقرير%20المدن%20الفندقية.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -194,7 +197,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms-rtl.html">
+                <a href="تقرير%20الغرف.html">
 
 
                     تقرير الغرف الفندقيه
@@ -215,7 +218,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits-rtl.html">
+                <a href="الأرباح.html">
 
 
                     طلب الأرباح
@@ -227,7 +230,7 @@
 
 
             <li>
-                <a href="business-commitment-rtl.html">
+                <a href="التزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -254,14 +257,14 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html ">
+                <a href="تغيير%20الباسورد.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
             <li>
-                <a href="https://ar.pyramid-challenge.com/share-us-your-idea ">
+                <a href="https://ar.pyramid-challenge.com/share-us-your-idea  ">
 
 
                     شاركنا فكرتك
@@ -289,139 +292,140 @@
 
 
 
-
 </section>
 <!-- end of nav-->
 <!-- start of form-->
-<section id="sections">
+<section id="form">
+    <div class="form-title">
+        <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+        ><a href="#" >
+            تسجيل نزيل جديد
 
-    <div class="container">
-        <div class="section-title">
+        </a></h2>
 
-            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-            >
-                <a href="#">
-                    <i class="fas fa-chevron-left"></i>
-                   اقسام الفندق
+    </div>
+    <div class="form-title">
 
-                </a>
-            </h2>
+        <p>
+لقد تم دعوتك من خلال رقم الفندق :                       <span>
+            1234567890
+        </span>
+        </p>
+    </div>
+    <div class="container-rtl">
 
-        </div>
-        <div class="section-row">
-            <div class="section-field wow fadeInLeft" data-wow-duration="0.3s" data-wow-delay="0.3s">
-                <a href="my-hotel-info-rtl-html.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        بياناتى
-
-
-                    </h2>
-                </a>
+        <form action="#" class="form">
+            <div class="form-group" >
+                <label for="number"></label>
+                <input type="text" class="form-control" id="number" placeholder=" أدخل مفتاحك الرقمى " required>
             </div>
-            <div class="section-field wow fadeInLeft" data-wow-duration="0.4s" data-wow-delay="0.4s">
-                <a href="hotel-guest-rtl.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تقرير بنزلاء فندقى
-
-                    </h2>
-                </a>
+            <div class="form-group ">
+                <label for="password"></label>
+                <input type="password" class="form-control"  id="password" placeholder="ضع كلمة السر لفندقك " required>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                <a href="cities-rtl.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تقرير مُدنى الفندقيه
-                    </h2>
-                </a>
+            <div class="form-group">
+                <label for="passwords"></label>
+                <input type="password" class="form-control"  id="passwords" placeholder="أعد كلمة السر لفندقك" required>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.6s" data-wow-delay="0.6s">
-                <a href="hotel-rooms-rtl.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تقرير الغرف الفندقيه
-
-                    </h2>
-                </a>
+            <div class="form-group">
+                <label for="frist-name"></label>
+                <input type="text" class="form-control"  id="frist-name" placeholder="أكتب أسمك الأول" required>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.7s" data-wow-delay="0.7s">
-                <a href="https://ar.pyramid-challenge.com/offer-of-the-month ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        عرض الشهر
-
-                    </h2>
-                </a>
+            <div class="form-group">
+                <label for="middle"></label>
+                <input type="text" class="form-control"  id="middle" placeholder="أكتب أسم الأب" required>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.8s">
-                <a href="withdraw-profits-rtl.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        طلب الأرباح
-                    </h2>
-                </a>
+            <div class="form-group">
+                <label for="last-name"></label>
+                <input type="text" class="form-control"  id="last-name" placeholder="أكتب لقب العائله" required>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
-                <a href="business-commitment-rtl.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        ألتزام العمل
-
-
-                    </h2>
-                </a>
+            <div class="form-group">
+                <label for="email"></label>
+                <input type="email" class="form-control"  id="email" placeholder="أدخل بريدك الألكترونى" required>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
-                <a href="https://ar.pyramid-challenge.com/share-post-via-facebook ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        مشاركة منشور دعائى عبر فيسبوك
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <a href="https://ar.pyramid-challenge.com/share-video-via-facebook ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        مشاركة فيديو دعائى عبر فيسبوك
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.1s" data-wow-delay="1.1s">
-                <a href="change-pass-rtl.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تغيير كلمة السر للفندق
-
-                    </h2>
-                </a>
+            <div class="form-group">
+                <label for="phone"></label>
+                <input type="text" class="form-control"  id="phone" placeholder="أدخل رقم هاتفك" required>
             </div>
 
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.2s" data-wow-delay="1.2s">
-                <a href="https://ar.pyramid-challenge.com/share-us-your-idea ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        شاركنا فكرتك
-
-
-                    </h2>
-                </a>
+            <div class="form-group">
+                <label for="country"></label>
+                <input type="text" class="form-control"  id="country" placeholder="حدد بلدك أو منطقة بلدك" required>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.3s" data-wow-delay="1.3s">
-                <a href="https://ar.pyramid-challenge.com  ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        خروج من حساب فندقى
+            <div class="form-group" >
+                <div id="inline" data-date="01/05/2020" >
+                    <label for="datepicker"></label>
+                    <input type="text" id="datepicker" name="datepicker"  placeholder="تاريخ ميلادك">
+                </div>
 
+            </div>
+            <div class="form-group checkbox-group">
+                <div class="checkbox">
+                    <input type="checkbox" name="female" required>
+                    <span>نوع/أنثي </span>
 
-                    </h2>
-                </a>
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox" name="male" required>
+                    <span> نوع/ذكر</span>
+
+                </div>
+
             </div>
 
-        </div>
+            <div class="form-group">
+                <div class="options">
+                    <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required>
+                        <option>حدد هدفك (اختار حلمك)</option>
+                        <option > شراء سياره</option>
+                        <option > شراء منزل</option>
+                        <option > سداد ديون</option>
+                        <option >السفر حول العالم</option>
+                        <option >دفع تكاليف تعليم</option>
+                        <option >توفير مصاريف للزواج</option>
+                        <option >أعمال خيريه</option>
+                        <option >فقط لأدخار المال</option>
+
+                    </select>
+                </div>
+
+            </div>
+            <div class="form-group">
+                <div class="options">
+                    <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collectio" required>
+                        <option >حدد طموحك المالي</option>
+                        <option >$ 100</option>
+                        <option >$  1000</option>
+                        <option >$  30,000</option>
+                        <option >$ 40,000</option>
+                        <option >$ 50,000</option>
+                        <option >$ 300,000</option>
+                        <option >$ 1,000,000</option>
+                        <option >$ سقف مفتوح </option>
+
+                    </select>
+                </div>
+
+            </div>
+            <div class="form-group checkbox-confirm">
+                <div class="checkbox">
+                    <input type="checkbox" name="video-confirm" required>
+                    <span> شاهدت فيديو شرح المشروع الفندقى </span>
+
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox" name="faq" required>
+                    <span>قرأت صفحة أسئله و إجابه </span>
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox" name="terms" required>
+                    <span>أوافق على شروط و بنود التعاقد الألكترونى
+                        <a href="https://ar.pyramid-challenge.com/terms-conditions"> الأطلاع على شروط و بنود التعاقد</a></span>
+                </div>
+            </div>
+
+            <a href="رسالة%20تسجيل%20النجاح%20للدخول.html" class="submit"  >أفتح غرفتك الأفتراضيه </a>
+        </form>
     </div>
 </section>
 <!-- end of form -->
@@ -442,7 +446,15 @@
     </div>
 </footer>
 <script src="js/jquery.js"></script>
+<script src="js/datepicker-full.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/app.js"></script>
+<script>
+    const elem = document.querySelector('input[name="datepicker"]');
+    const datepicker = new Datepicker(elem, {
+        // options here
+        calendarWeeks: false,
+    });
+</script>
 </body>
 </html>
