--- a/من نحن.html
+++ b/من نحن.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/forget-pass.css">
+    <link rel="stylesheet" href="css/about/custom-style.css">
     <link rel="stylesheet" href="css/style-rtl.css">
 </head>
 <body>
@@ -46,20 +46,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="chnage-pass.html">English</a>
+                        <a class="lang-text" href="about-us.html" >English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="change-pass-rtl.html">Arabic</a>
+                            <a class="lang-text" href="من نحن.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                    <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index-rtl.html">
+                    <a  href="تسجيل%20الدخول.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -70,7 +70,7 @@
     </div>
 
     <nav class="nav-bottom">
-        <ul  >
+        <ul>
             <li><a href="https://ar.pyramid-challenge.com/">
                 الرئيسيه
             </a></li>
@@ -85,7 +85,6 @@
             </a></li>
             <li><a href=" https://ar.pyramid-challenge.com/contact-us">
                 أتصل بنا
-
             </a></li>
         </ul>
     </nav>
@@ -118,11 +117,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="chnage-pass.html">English</a>
+                            <a class="lang-text" href="about-us.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="change-pass-rtl.html">Arabic</a>
+                                <a class="lang-text" href="من نحن.html">Arabic</a>
                             </div>
 
                         </div>
@@ -147,10 +146,10 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
+                <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index-rtl.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -164,7 +163,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info-rtl-html.html">
+                <a href="بيانات.html">
 
 
                     بياناتى
@@ -174,7 +173,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest-rtl.html">
+                <a href="تقرير%20النزلاء.html">
 
 
                     تقرير بنزلاء فندقى
@@ -185,7 +184,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="تقرير%20المدن%20الفندقية.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -195,7 +194,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms-rtl.html">
+                <a href="تقرير%20الغرف.html">
 
 
                     تقرير الغرف الفندقيه
@@ -216,7 +215,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits-rtl.html">
+                <a href="الأرباح.html">
 
 
                     طلب الأرباح
@@ -228,7 +227,7 @@
 
 
             <li>
-                <a href="business-commitment-rtl.html">
+                <a href="التزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -255,14 +254,14 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html">
+                <a href="تغيير%20الباسورد.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
             <li>
-                <a href="https://ar.pyramid-challenge.com/share-us-your-idea  ">
+                <a href="https://ar.pyramid-challenge.com/share-us-your-idea ">
 
 
                     شاركنا فكرتك
@@ -293,47 +292,136 @@
 
 </section>
 <!-- end of nav-->
-<section id="sections-hotel" >
- <div id="change-pass">
-     <div class="container">
-         <div class="section-back">
-             <a href="about-us-rtl.html">الرجوع لأقسام الفندق</a>
-         </div>
-     </div>
-     <div class="container">
-         <div class="hotel-info">
-             <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-             >
-                 <a href="#">
-                     تغيير كلمة السر للفندق
-                 </a>
-             </h3>
-
-         </div>
-     </div>
- </div>
-</section>
 <!-- start of form-->
-<section id="form">
-
+<section id="sections">
 
     <div class="container">
+        <div class="section-title">
 
-        <form action="#" class="form">
-            <div class="form-group wow fadeInRight"  data-wow-duration="1s" >
-                <label for="number"></label>
-                <input type="password" class="form-control" id="number" placeholder="أدخل كلمة السر الحاليه للفندق">
+            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+            >
+                <a href="#">
+                    <i class="fas fa-chevron-left"></i>
+                   اقسام الفندق
+
+                </a>
+            </h2>
+
+        </div>
+        <div class="section-row">
+            <div class="section-field wow fadeInLeft" data-wow-duration="0.3s" data-wow-delay="0.3s">
+                <a href="بيانات.html">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        بياناتى
+
+
+                    </h2>
+                </a>
             </div>
-            <div class="form-group wow fadeInRight"  data-wow-duration="3s">
-                <label for="password"></label>
-                <input type="password" class="form-control"  id="password" placeholder="أدخل كلمة السر الجديده">
+            <div class="section-field wow fadeInLeft" data-wow-duration="0.4s" data-wow-delay="0.4s">
+                <a href="تقرير%20النزلاء.html">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        تقرير بنزلاء فندقى
+
+                    </h2>
+                </a>
             </div>
-            <div class="form-group wow fadeInRight"  data-wow-duration="4s">
-                <label for="passwordd"></label>
-                <input type="password" class="form-control"  id="passwordd" placeholder="أدخل كلمة السر الجديده مره أخرى">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
+                <a href="تقرير%20المدن%20الفندقية.html">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        تقرير مُدنى الفندقيه
+                    </h2>
+                </a>
             </div>
-            <button class="change wow fadeInRight"  data-wow-duration="6s"  >تغيير كلمة السر للفندق</button>
-        </form>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.6s" data-wow-delay="0.6s">
+                <a href="تقرير%20الغرف.html">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        تقرير الغرف الفندقيه
+
+                    </h2>
+                </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.7s" data-wow-delay="0.7s">
+                <a href="https://ar.pyramid-challenge.com/offer-of-the-month ">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        عرض الشهر
+
+                    </h2>
+                </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.8s">
+                <a href="الأرباح.html">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        طلب الأرباح
+                    </h2>
+                </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
+                <a href="التزام%20العمل.html">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        ألتزام العمل
+
+
+                    </h2>
+                </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
+                <a href="https://ar.pyramid-challenge.com/share-post-via-facebook ">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        مشاركة منشور دعائى عبر فيسبوك
+
+                    </h2>
+                </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                <a href="https://ar.pyramid-challenge.com/share-video-via-facebook ">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        مشاركة فيديو دعائى عبر فيسبوك
+
+                    </h2>
+                </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1.1s" data-wow-delay="1.1s">
+                <a href="تغيير%20الباسورد.html">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        تغيير كلمة السر للفندق
+
+                    </h2>
+                </a>
+            </div>
+
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1.2s" data-wow-delay="1.2s">
+                <a href="https://ar.pyramid-challenge.com/share-us-your-idea ">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        شاركنا فكرتك
+
+
+                    </h2>
+                </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1.3s" data-wow-delay="1.3s">
+                <a href="https://ar.pyramid-challenge.com  ">
+                    <h2>
+                        <i class="fas fa-chevron-left"></i>
+                        خروج من حساب فندقى
+
+
+                    </h2>
+                </a>
+            </div>
+
+        </div>
     </div>
 </section>
 <!-- end of form -->
